--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -229,7 +229,7 @@ profile::jenkinscontroller::jcasc:
               - docker-windows
               - docker-windows-2019
             useAsMuchAsPossible: true
-            spot: true
+            spot: false
             userData:
               #this script is ran before the agent service startup so no need to restart it
               - <powershell>
