feat(trusted.ci.jenkins.io) use Let's Encrypt DNS challenge with certbot-dns-azure plugin
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -85,7 +85,7 @@ accounts:
       - sudo
 # Lets Encrypt settings
 letsencrypt::config::email: "tyler@monkeypox.org"
-letsencrypt::config::server: "https://acme-staging.api.letsencrypt.org/directory"
+letsencrypt::config::server: "https://acme-staging-v02.api.letsencrypt.org/directory" # Staging by default
 letsencrypt::renew_cron_ensure: "present"
 letsencrypt::renew_cron_minute: 0
 letsencrypt::renew_cron_hour: 6
