chore(rspec) fix jenkins role unit tests - fixup of 3ac9b8b9 (#2612)
* chore(rspec) fix jenkins role unit tests - fixup of 3ac9b8b9

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* Update hieradata/rspec/profile_jenkinscontroller.yaml

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* code review

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* Update hieradata/rspec/role_jenkins.yaml

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -5,7 +5,7 @@ lookup_options:
       strategy: deep
       merge_hash_arrays: true
 
-profile::jenkinscontroller::ci_fqdn: 'cert.ci.jenkins.io'
+profile::jenkinscontroller::ci_fqdn: 'jenkinscontroller.profile.rspec.test.local'
 profile::jenkinscontroller::proxy_port: 443
 profile::jenkinscontroller::letsencrypt: false
 profile::jenkinscontroller::groovy_init_enabled: false
