Revert "chore(ci.jenkins.io): disable cik8s before updating it to Kubernetes 1.24 (#2653)"
This reverts commit 28ab89abe3c5bb9190bf784bebded0e369e288cb.

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -104,7 +104,7 @@ profile::jenkinscontroller::jcasc:
   cloud_agents:
     kubernetes:
       cik8s:
-        enabled: false
+        enabled: true
         provider: "aws"
         credentialsId: "cik8s-jenkins-agent-sa-token"
         serverCertificate: >
