--- a/hieradata/clients/pkg.yaml
+++ b/hieradata/clients/pkg.yaml
@@ -5,4 +5,4 @@
 apache::mod::event::serverlimit: '30' #default 25
 # https://httpd.apache.org/docs/2.4/fr/mod/mpm_common.html#maxrequestworkers
 # maxrequestworkers = ServerLimit (see value above) * ThreadsPerChild (default: 25)
-apache::mod::event::maxrequestworkers: '750'
+apache::mod::event::maxrequestworkers: 750
