--- a/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
@@ -14,13 +14,21 @@ scms:
       branch: "{{ .github.branch }}"
 
 sources:
+  getPackerImageDeployedVersion:
+    kind: yaml
+    name: Retrieve the current version of the Packer images used in production
+    spec:
+      file: ./hieradata/common.yaml
+      key: "profile::jenkinscontroller::jcasc.agent_images.azure_vms_gallery_image.version"
   # Retrieving Maven from packer-images to synchronize its version across our infra
   # See https://github.com/jenkins-infra/docker-inbound-agents/issues/18
   getMavenVersionFromPackerImages:
     kind: file
     name: Get the latest Maven version set in packer-images
+    dependson:
+      - getPackerImageDeployedVersion
     spec:
-      file: https://raw.githubusercontent.com/jenkins-infra/packer-images/main/provisioning/tools-versions.yml
+      file: https://raw.githubusercontent.com/jenkins-infra/packer-images/{{ source "getPackerImageDeployedVersion" }}/provisioning/tools-versions.yml
       matchpattern: 'maven_version:\s"(.*)"'
     transformers:
       - findsubmatch:
@@ -38,6 +46,7 @@ targets:
   setMavenVersion:
     name: "Bump Maven version on tools"
     kind: yaml
+    sourceid: getMavenVersionFromPackerImages
     spec:
       file: hieradata/common.yaml
       key: "profile::jenkinscontroller::jcasc.tools_default_versions.maven"
