fix(cert.ci): add missing docker label for Azure VM agents

--- a/hieradata/clients/cert-ci.yaml
+++ b/hieradata/clients/cert-ci.yaml
@@ -83,6 +83,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - linux
+            - docker
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
@@ -98,6 +99,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - windows
+            - docker
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
