differenciate docker labels depending on the type of OS
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/cert-ci.yaml
+++ b/hieradata/clients/cert-ci.yaml
@@ -99,7 +99,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - windows
-            - docker
+            - docker-windows
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
