--- a/hieradata/clients/cert-ci.yaml
+++ b/hieradata/clients/cert-ci.yaml
@@ -84,6 +84,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - linux
+            - docker
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
@@ -100,6 +101,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - windows
+            - docker-windows
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
