fix(updatecli): update Maven version in rspec too

--- a/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
@@ -59,7 +59,9 @@ targets:
       - addprefix: /home/jenkins/tools/apache-maven-
       - addsuffix: /bin
     spec:
-      file: hieradata/clients/azure.ci.jenkins.io.yaml
+      files:
+        - hieradata/clients/azure.ci.jenkins.io.yaml
+        - hieradata/rspec/profile_jenkinscontroller.yaml
       key: "profile::jenkinscontroller::jcasc.permanent_agents.s390x-agent.envVars.PATH+MAVEN"
     scmid: default
   setMavenToolVersionFors390x:
@@ -69,7 +71,9 @@ targets:
     transformers:
       - addprefix: /home/jenkins/tools/apache-maven-
     spec:
-      file: hieradata/clients/azure.ci.jenkins.io.yaml
+      files:
+        - hieradata/clients/azure.ci.jenkins.io.yaml
+        - hieradata/rspec/profile_jenkinscontroller.yaml
       key: "profile::jenkinscontroller::jcasc.permanent_agents.s390x-agent.toolLocation[0].home"
     scmid: default
 
