feat(datadog) define custom hostname for each VM and enable EC2 tags collection when needed
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/census.yaml
+++ b/hieradata/clients/census.yaml
@@ -7,3 +7,6 @@ lvm::volume_groups:
       census:
         size: 64G
         mountpath: /srv/census
+# Per-host Datadog configuration
+datadog_agent::host: "census.jenkins.io"
+datadog_agent::collect_ec2_tags: true # TODO: remove when moved to Azure
