--- a/hieradata/clients/pkg.yaml
+++ b/hieradata/clients/pkg.yaml
@@ -6,3 +6,5 @@ apache::mod::event::serverlimit: 30 #default 25
 # https://httpd.apache.org/docs/2.4/fr/mod/mpm_common.html#maxrequestworkers
 # maxrequestworkers = ServerLimit (see value above) * ThreadsPerChild (default: 25)
 apache::mod::event::maxrequestworkers: 750
+datadog_agent::host: "pkg.origin.jenkins.io"
+datadog_agent::collect_ec2_tags: true # TODO: remove when https://github.com/jenkins-infra/helpdesk/issues/2649 is done
