feat(apache|datadog-agent) ensure that datadog-agent can read apache2 logs directory
- Use the rotatelogs '-p' (ref. https://httpd.apache.org/docs/2.4/programs/rotatelogs.html) option to compress logs (custom script) instead of the former puppet apachecompressor module
- Ensure that apache2 log dir is 755 - ref. https://httpd.apache.org/docs/2.4/misc/security_tips.html#serverroot

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -109,6 +109,7 @@ apache::keepalive: "On"
 apache::keepalive_timeout: 3
 apache::server_tokens: "Prod"
 apache::server_signature: "Off"
+apache::logroot_mode: "0755"
 ### Stuff for IRC jenkins-admin bot
 # access to GitHub (for creating repos, etc)
 profile::jenkinsadmin::github_login: "jenkinsadmin"
