hotfix(ci.jenkins.io) ensure new Azure gallery naming is used for 1.2.2
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -106,7 +106,7 @@ profile::jenkinscontroller::jcasc:
       agent_definitions:
         - name: "ubuntu-20"
           description: "Ubuntu 20.04 LTS"
-          imageDefinition: jenkins-agent-ubuntu-20.04
+          imageDefinition: jenkins-agent-ubuntu-20.04-amd64
           os: "ubuntu"
           storageAccount: SuperSecretThatShouldBeEncryptedInProduction
           location: "East US 2"
@@ -127,7 +127,7 @@ profile::jenkinscontroller::jcasc:
           initScript: *datadogInitUserData
         - name: "win-2019" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2019"
-          imageDefinition: jenkins-agent-windows-2019
+          imageDefinition: jenkins-agent-windows-2019-amd64
           os: "windows"
           storageAccount: SuperSecretThatShouldBeEncryptedInProduction
           location: "East US 2"
