--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -430,6 +430,7 @@ profile::jenkinscontroller::plugins:
   - blueocean
   - build-timeout
   - buildtriggerbadge
+  - build-discarder # Remove older builds if no policy defined - https://github.com/jenkins-infra/helpdesk/issues/3495
   - cloudbees-folder
   - code-coverage-api
   - config-file-provider
