feat(ci.jenkins.io) enable S3 artifact manager globally
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -52,6 +52,11 @@ profile::jenkinscontroller::jcasc:
                   numToKeepStr: "5"
   artifact-manager:
     data: |-
+      unclassified:
+        artifactManager:
+          artifactManagerFactories:
+          - jclouds:
+              provider: "s3"
       aws:
         awsCredentials:
           credentialsId: "aws-s3-artifact-manager"
