--- a/updatecli/weekly.d/jenkinscontroller-agents.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents.yaml
@@ -1,5 +1,5 @@
 ---
-name: Bump agent templates version on all controllers
+name: Bump agent templates version on all controllers except windows containers
 
 scms:
   default:
@@ -39,36 +39,6 @@ sources:
       image: "jenkinsciinfra/jenkins-agent-ubuntu-22.04"
       tag: '{{ source "packerImageVersion"}}'
       architecture: arm64
-  getLatestInboundMaven8WindowsContainerImage:
-    kind: dockerdigest
-    spec:
-      image: "jenkinsciinfra/inbound-agent-maven"
-      tag: "jdk8-nanoserver"
-      architecture: amd64
-  getLatestInboundMaven11WindowsContainerImage:
-    kind: dockerdigest
-    spec:
-      image: "jenkinsciinfra/inbound-agent-maven"
-      tag: "jdk11-nanoserver"
-      architecture: amd64
-  getLatestInboundMaven17WindowsContainerImage:
-    kind: dockerdigest
-    spec:
-      image: "jenkinsciinfra/inbound-agent-maven"
-      tag: "jdk17-nanoserver"
-      architecture: amd64
-  getLatestInboundMaven19WindowsContainerImage:
-    kind: dockerdigest
-    spec:
-      image: "jenkinsciinfra/inbound-agent-maven"
-      tag: "jdk19-nanoserver"
-      architecture: amd64
-  getLatestInboundWebBuilderContainerImage:
-    kind: dockerdigest
-    spec:
-      image: "jenkinsciinfra/builder"
-      tag: "latest"
-      architecture: amd64
   getLatestInboundJDK11ContainerImage:
     kind: dockerdigest
     spec:
@@ -138,16 +108,6 @@ targets:
     transformers:
       - addprefix: "jenkinsciinfra/jenkins-agent-ubuntu-22.04@"
     scmid: default
-  setInboundWebBuilderContainerImage:
-    sourceid: getLatestInboundWebBuilderContainerImage
-    name: "Bump container agent image jenkinsciinfra/builder"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-webbuilder"
-    transformers:
-      - addprefix: "jenkinsciinfra/builder@"
-    scmid: default
   setInboundJDK11ContainerImage:
     sourceid: getLatestInboundJDK11ContainerImage
     name: "Bump container agent image jenkins/inbound-agent (JDK11)"
@@ -157,46 +117,6 @@ targets:
       key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp"
     transformers:
       - addprefix: "jenkins/inbound-agent@"
-    scmid: default
-  setInboundJDK8WindowsContainerImage:
-    sourceid: getLatestInboundMaven8WindowsContainerImage
-    name: "Bump container agent image jenkinsciinfra/inbound-agent-maven (jdk8-nanoserver)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-8-windows"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk8-nanoserver@"
-    scmid: default
-  setInboundJDK11WindowsContainerImage:
-    sourceid: getLatestInboundMaven11WindowsContainerImage
-    name: "Bump container agent image jenkinsciinfra/inbound-agent-maven (jdk11-nanoserver)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-11-windows"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk11-nanoserver@"
-    scmid: default
-  setInboundJDK17WindowsContainerImage:
-    sourceid: getLatestInboundMaven17WindowsContainerImage
-    name: "Bump container agent image jenkinsciinfra/inbound-agent-maven (jdk17-nanoserver)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-17-windows"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk17-nanoserver@"
-    scmid: default
-  setInboundJDK19WindowsContainerImage:
-    sourceid: getLatestInboundMaven19WindowsContainerImage
-    name: "Bump container agent image jenkinsciinfra/inbound-agent-maven (jdk19-nanoserver)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-19-windows"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk19-nanoserver@"
     scmid: default
   setUbuntuAgentAMIArm64:
     name: "Bump AMI ID for Ubuntu ARM64 agents"
@@ -211,7 +131,7 @@ actions:
   default:
     kind: github/pullrequest
     scmid: default
-    title: Bump agent templates version on all controllers
+    title: Bump agent templates version on all controllers except windows containers
     spec:
       labels:
         - dependencies
