--- a/updatecli/weekly.d/jenkinscontroller-agents.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents.yaml
@@ -1,5 +1,5 @@
 ---
-name: Bump agent templates version on all controllers except windows containers
+name: Bump packer agent templates version
 
 scms:
   default:
@@ -131,7 +131,7 @@ actions:
   default:
     kind: github/pullrequest
     scmid: default
-    title: Bump agent templates version on all controllers except windows containers
+    title: Bump packer agent templates version to {{ source "packerImageVersion" }}
     spec:
       labels:
         - dependencies
