--- a/hieradata/clients/controller.trusted.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.trusted.ci.jenkins.io.yaml
@@ -10,7 +10,7 @@ lookup_options:
       merge_hash_arrays: true
 
 # TODO: keep updated with updatecli when all ubuntu images are switched to 22.04
-docker::version: "5:24.0.0-1~ubuntu.22.04~jammy"
+docker::version: 5:24.0.0-1~ubuntu.22.04~jammy # Tracked by updatecli
 
 accounts:
   wfollonier:
