chore(updatecli) fix maven manifest following up quote removals
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
@@ -29,10 +29,10 @@ sources:
       - getPackerImageDeployedVersion
     spec:
       file: https://raw.githubusercontent.com/jenkins-infra/packer-images/{{ source "getPackerImageDeployedVersion" }}/provisioning/tools-versions.yml
-      matchpattern: 'maven_version:\s"(.*)"'
+      matchpattern: 'maven_version:\s(.*)'
     transformers:
       - findsubmatch:
-          pattern: 'maven_version:\s"(.*)"'
+          pattern: 'maven_version:\s(.*)'
           captureindex: 1
 
 conditions:
