feat(cert.ci) update to ubuntu 22.04
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -57,6 +57,7 @@ targets:
         - hieradata/clients/private.vpn.jenkins.io.yaml
         - hieradata/clients/controller.trusted.ci.jenkins.io.yaml
         - hieradata/clients/agent.trusted.ci.jenkins.io.yaml
+        - hieradata/clients/cert-ci.yaml
       key: "docker::version"
     scmid: default
 
