feat: make Ubuntu 22.04 the default (#2920)
* feat: invert Docker-CE versions between Jammy and Bionic

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* chore: switch testing to Ubuntu Jammy

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fixup

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

---------

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/vagrant-docker/Dockerfile
+++ b/vagrant-docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LANG="en_US.UTF-8"
@@ -64,7 +64,7 @@ RUN package_path=/tmp/puppetrelease.deb \
   && dpkg -i "${package_path}" \
   && rm -f /tmp/puppetrelease.deb \
   && apt-get update --quiet \
-  && apt-get install --no-install-recommends --yes --quiet puppet-agent \
+  && apt-get install --no-install-recommends --yes --quiet puppet \
   && apt-get clean \
   && rm -Rf /var/lib/apt/lists/*
 
